Light dimming endpoint addition
